feature: мини фиксы, поправил публичную, приватною апи
